--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ This code snippet is an HTML document that represents a personal website. It inc
             <span class="cd-words-wrapper">
               <b class="is-visible">a web developer.&nbsp;&nbsp;</b>
               <b>a YouTuber.</b>
-              <b>a Gamer.</b>
+              <b>a Gammer.</b>
               <b>a BCA Student.</b>
               <b>a proud Indian.</b>
             </span><br>
           </h1>
         </section>
-        <a href="book.html" class="btn"> E-Book </a>
-        <br>
+        
+      
         <a href="#coffeewithme" class="btn"> Coffee with me</a>
       </div>
     </div>
