--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ This code snippet is an HTML document that represents a personal website. It inc
           <p>
             Have a look at my <a href="https://youtube.com/@Sauravby?si=cauI40Ox_sfdGFFi" target="_blank">YouTube Channel</a>, <a
               href="#myskills">skills</a> or just connect with me on <a href="https://www.linkedin.com/in/saurav-byadwal-125176199/"
-              target="_blank">LinkedIn</a>. I am always excited to do business with like minded people, lets discuss
-            over <a href="#coffeewithme">coffee</a>.
+              target="_blank">LinkedIn</a>. I am always excited to do business with like-minded people, let's discuss this over  <a href="#coffeewithme">coffee</a>.
           </p>
         </div>
       </div>
