--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ This code snippet is an HTML document that represents a personal website. It inc
             <span class="cd-words-wrapper">
               <b class="is-visible">a web developer.&nbsp;&nbsp;</b>
               <b>a YouTuber.</b>
-              <b>a Gammer.</b>
+              <b>a Gamer.</b>
               <b>a BCA Student.</b>
               <b>a proud Indian.</b>
             </span><br>
@@ -95,7 +95,7 @@ This code snippet is an HTML document that represents a personal website. It inc
         <div class="large-8 medium-8 columns">
           <h1>About me.</h1>
           <p>
-            Hi I am <a href="https://instagram.com/sauravbyadwal?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank">Saurav Byadwal</a>, a 18 year old Web
+            Hi, I am <a href="https://instagram.com/sauravbyadwal?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank">Saurav Byadwal</a>, a 18 year old Web
             developer, YouTuber, and a Gamer living in <a href="https://goo.gl/maps/x8JF1zkp3drQukTT8"
               target="_blank">Jaipur, India</a>. I am a BCA Student.
           </p>
