--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ This code snippet is an HTML document that represents a personal website. It inc
       </div>
       <div class="numbers">
         <h4 id="coffee-cups">512</h4>
-        <span>cups of coffee drunk</span>
+        <span>cups of coffee drink</span>
       </div>
       <div class="numbers">
         <h4 id="projects-completed">2</h4>
