--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ This code snippet is an HTML document that represents a personal website. It inc
   <meta charset="utf-8" />
   <meta name="google-site-verification" content="CCdRdGi4mcQEMv_Q4-K8uQwAU59lbJEycK-zBCBX4q0" />
   <meta name="description"
-    content="Hello World, I'm a Web developer, YouTuber, and a BCA Student. If you want your own website or play games online then coffee with me.">
+    content="Hello, I'm a Web developer, YouTuber, and a BCA Student. If you want your own website or play games online then coffee with me.">
   <meta name="keywords"
     content="web development, web designing, youtube, javascript, tutorials, react, angular, website, seo, bca student, social media marketing, freelancer, bengaluru, india ">
   <meta name="author" content="Saurav Byadwal">
@@ -20,7 +20,7 @@ This code snippet is an HTML document that represents a personal website. It inc
   <meta property="og:image" content="img/logo.png" />
   <meta property="og:site_name" content="Saurav Byadwal" />
   <meta property="og:description"
-    content="Hello World, I'm a Web developer, YouTuber, and a BCA Student. If you want your own website or play games online then coffee with me." />
+    content="Hello, I'm a Web developer, YouTuber, and a BCA Student. If you want your own website or play games online then coffee with me." />
   <title>Saurav Byadwal</title>
   <link href="img/favicon.ico" type="image/x-icon" rel="shortcut icon" />
   <link rel="stylesheet" href="css/foundation.css" />
